# MGA4all

./: COPYRIGHT  LICENSE  README.md  pyproject.toml
backend/: pypsa_model.py
configs/: default_workflow.yaml  test_workflow.yaml
configs/spores_configs/: diversify_evo_avg.yaml  diversify_rel_deploy.yaml
configs/spores_configs/default_spores_configs/: diversify.yaml  max_ashp.yaml  max_baseload_supply.yaml  max_boiler_gg.yaml  max_boiler_h2.yaml  max_chp.yaml  max_e_boiler.yaml  max_electrification.yaml  max_geothermal.yaml  max_molecules.yaml  max_pipeline.yaml  max_residual_heat.yaml  max_solar_thermal.yaml  max_storage_ht_ates.yaml  max_storage_tes.yaml  max_strategic_elec.yaml  max_wte.yaml  min_ashp.yaml  min_baseload_supply.yaml  min_boiler_gg.yaml  min_boiler_h2.yaml  min_e_boiler.yaml  min_electrification.yaml  min_freq_techs.yaml  min_geothermal.yaml  min_molecules.yaml  min_pipeline.yaml  min_residual_heat.yaml  min_storage_tes.yaml
configs/spores_configs/test_spores_configs/: diversify.yaml  max_ashp.yaml  test_diversify.yaml
docs/: contributing.md
src/mga4all/: examples.py  spores.py  validate.py
tests/: conftest.py  test_create_and_optimize_model_spore.py  test_evolving_average.py  test_evolving_median.py  test_modify_spore_objective.py  test_random_weighting.py  test_relative_deployment.py  test_run_spores.py  test_validation.py
utils/: plot_pypsa_model.py
